--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -18,5 +18,5 @@ jobs:
           host: ${{ secrets.HOST }}
           username: ${{ secrets.USERNAME }}
           key: ${{ secrets.SSHKEY }}
-          script: " cd /home/ubuntu/ice-cream-website && ./scripts/deploy.sh"
+          script: "cd /home/ubuntu/ice-cream-website && docker-compose up --build -d"
           
