changes in deploy.yml file

--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -18,5 +18,8 @@ jobs:
           host: ${{ secrets.HOST }}
           username: ${{ secrets.USERNAME }}
           key: ${{ secrets.SSHKEY }}
-          script: "cd /home/ubuntu/ice-cream-website && ./.scripts/deploy.sh"
+          port: ${{ secrets.PORT }}
+          script: | 
+            cd /home/ubuntu/ice-cream-website  
+            ./.scripts/deploy.sh
           
